# kuka-packages

kuka_d435/: CMakeLists.txt  package.xml
kuka_d435/config/: gazebo_controller.yaml
kuka_d435/launch/: moveit_gazebo.launch  rviz.launch  rviz_gazebo.launch
kuka_d435/rviz/: urdf.rviz
kuka_d435/urdf/: kr6.xacro
moveit_d435/: CMakeLists.txt  package.xml
moveit_d435/config/: fake_controllers.yaml  kuka_d435.srdf  ompl_planning.yaml  ros_controllers.yaml
moveit_d435/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  kuka_d435_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
